--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 		<img id="ms_logo" src="assets/ms.png">
 		<img id="fb_logo" src="assets/fbb.png">
 		<img id="go_logo" src="assets/google.png">
-		<img id="li_logo" src="assets/linkedin.png">
+		<img id="li_logo" src="assets/linkedIn.png">
+			
 		<br>
 		<p>Don't have an account ?  <a href="#"> <b>SignUp</b> </a></p>
 		</div>	
